Fix swagger and fix error messages
